--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.doantotnghiep">
+    <uses-permission android:name="android.permission.NFC"/>
    <application
         android:label="doantotnghiep"
         android:name="${applicationName}"
