--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dev_dependencies:
   nfc_manager: ^3.3.0
   flutter_nfc_kit: ^3.3.1
   firebase_core: ^2.14.0
+  cloud_firestore: ^4.8.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
