--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dev_dependencies:
   firebase_storage: ^11.2.5
   cloud_firestore: ^4.8.4
   image_picker: ^1.0.2
+  image_cropper: ^4.0.1
+  google_nav_bar: ^5.0.6
 
 flutter:
   uses-material-design: true
