--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,4 +33,5 @@ flutter:
   assets:
     - assets/images/cs/
     - assets/images/services/
+    - assets/images/services/shop/
     - assets/images/shop/
