--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dev_dependencies:
   image_cropper: ^4.0.1
   google_nav_bar: ^5.0.6
   carousel_slider: ^4.2.1
+  get_storage: ^2.1.1
 
 flutter:
   uses-material-design: true
