--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dev_dependencies:
   google_nav_bar: ^5.0.6
   carousel_slider: ^4.2.1
   get_storage: ^2.1.1
+  sliding_up_panel: ^2.0.0+1
 
 flutter:
   uses-material-design: true
