--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dev_dependencies:
   carousel_slider: ^4.2.1
   get_storage: ^2.1.1
   sliding_up_panel: ^2.0.0+1
+  flutter_image_compress: ^2.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
