--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,17 @@ dev_dependencies:
   get_storage: ^2.1.1
   sliding_up_panel: ^2.0.0+1
   flutter_image_compress: ^2.0.4
+  flutter_native_splash: ^2.2.19
+  google_fonts:
+
+#flutter_native_splash:
+#    color: "#ffffff"
+#    image: assets/images/splash.png
+#    android: false
+#    ios: true
+#    web: false
+#    android_gravity: center
+#    ios_content_mode: center
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
