--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
         android:name="android.hardware.nfc"
         android:required="true" />
    <application
-        android:label="petcare"
+        android:label="PetCare"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
