--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dev_dependencies:
   sliding_up_panel: ^2.0.0+1
   flutter_image_compress: ^2.0.4
   flutter_native_splash: ^2.2.19
+  url_launcher: ^6.1.14
   google_fonts:
 
 #flutter_native_splash:
