--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dev_dependencies:
   flutter_native_splash: ^2.2.19
   url_launcher: ^6.1.14
   google_fonts:
+  dialog_flowtter: ^0.3.3
 
 #flutter_native_splash:
 #    color: "#ffffff"
@@ -90,6 +91,7 @@ flutter:
     - assets/images/services/
     - assets/images/services/shop/
     - assets/images/shop/
+    - assets/dialog_flow_auth.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
