fix web view UI

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,7 @@ dev_dependencies:
   url_launcher: ^6.1.14
   google_fonts:
   dialog_flowtter: ^0.3.3
-  flutter_inappwebview: ^6.0.0-beta.25
+  flutter_inappwebview: ^5.8.0
 
 #flutter_native_splash:
 #    color: "#ffffff"
